--- a/client/app/styles/base/_variables.scss
+++ b/client/app/styles/base/_variables.scss
@@ -71,7 +71,7 @@ $base-border-color: $light-gray;
 $base-border: 1px solid $base-border-color;
 
 // Menu
-$menu-height: rem(50);
+$menu-height: rem(60);
 
 // Msg-box and Forms
 $form-box-shadow: inset 0 1px 3px $color-form-box-shadow;
